--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
                 <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/enose.png" class="thumb-link" title="E-Nose Raw Reading Display" data-size="684x666">
-                                <img src="images/portfolio/gallery/enose.png" alt="">
+                            <a href="images/portfolio/gallery/enose.PNG" class="thumb-link" title="E-Nose Raw Reading Display" data-size="684x666">
+                                <img src="images/portfolio/gallery/enose.PNG" alt="">
                             </a>    
                             <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
@@ -284,8 +284,8 @@
                 <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/sdg.png" class="thumb-link" title="SDG" data-size="899x665">
-                                <img src="images/portfolio/gallery/sdg.png" alt="">
+                            <a href="images/portfolio/gallery/sdg.PNG" class="thumb-link" title="SDG" data-size="899x665">
+                                <img src="images/portfolio/gallery/sdg.PNG" alt="">
                             </a>
                             <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
@@ -307,8 +307,8 @@
                     <div class="item-folio">
                             
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/pets.png" class="thumb-link" title="Wonder Pets Shop" data-size="686x520">
-                                <img src="images/portfolio/gallery/pets.png" alt="">
+                            <a href="images/portfolio/gallery/pets.PNG" class="thumb-link" title="Wonder Pets Shop" data-size="686x520">
+                                <img src="images/portfolio/gallery/pets.PNG" alt="">
                             </a>
                             <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
