--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div>
     
             <div class="row about-me__buttons">
-				<a href="Velasco_Resume.pdf" class="btn btn--primary full-width">Download Resume</a>
+				<a href="VELASCO_Resume.pdf" class="btn btn--primary full-width">Download Resume</a>
             </div>
 
         </div> <!-- end about-me -->
