--- a/index.html
+++ b/index.html
@@ -70,10 +70,9 @@
             <div class="column large-9 mob-full intro-text">
                 <h3>Hello, I'm Christian Paul Velasco</h3>
                 <h1>
-                    4th Year <br>
                     Computer<br>
 					Engineering <br>
-                    Student
+                    Graduate
                 </h1>
             </div>
 
@@ -105,7 +104,7 @@
 
             <div class="row about-me__content" data-aos="fade-up">
 				<p class="lead">
-				An adaptable and highly motivated computer engineering student with academic experience to keep up 
+				An adaptable and highly motivated computer engineering graduate with academic experience to keep up 
 				with various positions possible. Equipped with a foundation of computer engineering concepts and 
 				acquired knowledge in different programming languages for various software from studies and technical 
 				experiences within academics. Eager to learn and acquire further experience in the field and willing 
@@ -188,15 +187,15 @@
                         <div class="timeline__block">
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
-                                <p class="timeline__timeframe">2019 - Present</p>
+                                <p class="timeline__timeframe">2019 - 2024</p>
                                 <h3 class="item-title">De La Salle University - Laguna Campus</h3>
                                 <h5>Bachelor Degree</h5>
                             </div>
                             <div class="timeline__desc">
-                                <p>●	Currently a 4th-year college student<br>
+                                <p>●	Finished the degree as Cum Laude<br>
+								●	Finished a thesis entitled "Development of a Wastewater Monitoring System Using Electronic Nose Technology"<br>
 								●	Had one research publication entitled "Wide Bandpass Filter Composed of First-Order and Second-Order Active High Pass Filters Simulated Using MATLAB and Multisim Live"<br>
-								●	Former Chairperson for Research and Development - Gokongwei College of Engineering (GCOE) at DLSU Laguna Campus Student Government (LCSG)<br>
-								●	Currently working on a thesis entitled "Development of a Wastewater Monitoring System Using Electronic Nose Technology"
+								●	Former Chairperson for Research and Development - Gokongwei College of Engineering (GCOE) at DLSU Laguna Campus Student Government (LCSG)
 								</p>
                             </div>
                         </div>
@@ -260,8 +259,8 @@
                 <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/enose.PNG" class="thumb-link" title="E-Nose Raw Reading Display" data-size="684x666">
-                                <img src="images/portfolio/gallery/enose.PNG" alt="">
+                            <a href="images/portfolio/gallery/enose.png" class="thumb-link" title="E-Nose Raw Reading Display" data-size="684x666">
+                                <img src="images/portfolio/gallery/enose.png" alt="">
                             </a>    
                             <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
@@ -271,12 +270,12 @@
                                 E-Nose Raw Reading Display
                             </h4>
                             <p class="item-folio__cat">
-                                Web Design
+                                Web Development
                             </p>
                         </div>
     
                         <div class="item-folio__caption">
-                            <p>This is a web design intended for showing the raw readings of the enose prototype in our thesis.</p>
+                            <p>This features our web development with ReactJS and PHP Laravel, with the development geared towards making a platform to show the raw readings of the enose prototype in our thesis.</p>
                         </div>
                     </div>
                 </div> <!-- end masonry__brick -->
@@ -284,8 +283,8 @@
                 <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/sdg.PNG" class="thumb-link" title="SDG" data-size="899x665">
-                                <img src="images/portfolio/gallery/sdg.PNG" alt="">
+                            <a href="images/portfolio/gallery/sdg.png" class="thumb-link" title="SDG" data-size="899x665">
+                                <img src="images/portfolio/gallery/sdg.png" alt="">
                             </a>
                             <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
@@ -307,8 +306,8 @@
                     <div class="item-folio">
                             
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/pets.PNG" class="thumb-link" title="Wonder Pets Shop" data-size="686x520">
-                                <img src="images/portfolio/gallery/pets.PNG" alt="">
+                            <a href="images/portfolio/gallery/pets.png" class="thumb-link" title="Wonder Pets Shop" data-size="686x520">
+                                <img src="images/portfolio/gallery/pets.png" alt="">
                             </a>
                             <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
@@ -367,7 +366,7 @@
         <div class="row contact-main" data-aos="fade-up">
             <div class="column large-full">
                 <p class="contact-email">
-                    <a href="mailto:christianpsvelasco@gmail">christianpsvelasco@gmail.com</a>
+                    <a href="mailto:christianvelasco1019@gmail">christianvelasco1019@gmail.com</a>
                 </p>
             </div>
         </div>
