--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/enose.png" class="thumb-link" title="E-Nose Raw Reading Display" data-size="684x666">
+                            <a href="images/portfolio/gallery/enose.png" class="thumb-link" title="E-Nose Raw Reading Display" data-size="1309x663">
                                 <img src="images/portfolio/gallery/enose.png" alt="">
                             </a>    
                             <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link" target="_blank"></a>
@@ -275,7 +275,7 @@
                         </div>
     
                         <div class="item-folio__caption">
-                            <p>This features our web development with ReactJS and PHP Laravel, with the development geared towards making a platform to show the raw readings of the enose prototype in our thesis.</p>
+                            <p>This features our web development with ReactJS and PHP Laravel, which was made to show the raw readings and graphs of the enose prototype in our thesis.</p>
                         </div>
                     </div>
                 </div> <!-- end masonry__brick -->
